PROJECT ( CommandPlugin VERSION 7.11.0 LANGUAGES CXX )

FIND_PACKAGE (OpenSSL REQUIRED)

IF (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../../tmx-build)
	SET (CMAKE_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../tmx-build ${CMAKE_INCLUDE_PATH})
ENDIF ()

FIND_PATH (WEBSOCKETS_INCLUDE_DIR lws_config.h)

SET (CMAKE_LIBRARY_PATH ${WEBSOCKETS_INCLUDE_DIR}/../lib ${CMAKE_LIBRARY_PATH})

FIND_LIBRARY (WEBSOCKETS_LIBRARY libwebsockets.a)
FIND_LIBRARY (EV_LIBRARY ev)
FIND_LIBRARY (UV_LIBRARY uv)
FIND_LIBRARY (CAP_LIBRARY cap)

BuildTmxPlugin ( )

TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PUBLIC ${WEBSOCKETS_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} tmxctlStatic tmxutils 
					   ${WEBSOCKETS_LIBRARY} ${OPENSSL_LIBRARIES} ${EV_LIBRARY} ${UV_LIBRARY} ${CAP_LIBRARY})

# Do not try to send my own log messages to myself,
# but strictly log them to a file
TARGET_COMPILE_OPTIONS (${PROJECT_NAME} PRIVATE -DNO_EVENTLOG_UDP)
