PROJECT ( DsrcImmediateForwardPlugin VERSION 5.0 LANGUAGES CXX )

SET (TMX_PLUGIN_NAME "DSRC Message Manager")

FIND_PACKAGE (XercesC REQUIRED)

BuildTmxPlugin ()

TARGET_INCLUDE_DIRECTORIES ( ${PROJECT_NAME} PUBLIC ${XercesC_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES ( ${PROJECT_NAME} tmxutils ${XercesC_LIBRARY} )
