project( LocationPlugin VERSION 7.5.0 LANGUAGES CXX )

SET (TMX_PLUGIN_NAME Location)

BuildTmxPlugin ()

FIND_PATH (GPS_INCLUDE_DIR NAMES gps.h )
FIND_LIBRARY (GPS_LIBRARY gps)

TARGET_INCLUDE_DIRECTORIES ( ${PROJECT_NAME} PUBLIC ${GPS_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES ( ${PROJECT_NAME} tmxutils rt ${GPS_LIBRARY})
