PROJECT ( MapPlugin VERSION 7.4.0 LANGUAGES CXX )

SET (TMX_PLUGIN_NAME "MAP")

FIND_PACKAGE (XercesC REQUIRED)
FIND_PACKAGE (carma-clock)

BuildTmxPlugin ()

TARGET_INCLUDE_DIRECTORIES ( ${PROJECT_NAME} PUBLIC ${XercesC_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES ( ${PROJECT_NAME} tmxutils ::carma-clock rdkafka++ jsoncpp ${XercesC_LIBRARY} )
